Coded the bulk of the website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="favicon.zip"
+      >
+    <title>Bakeify</title>
+    
+</head>
+<body>
+    <nav class="topnav">
+        <div class="topnavleft">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="topnavright">
+            <a href="DOW.html">Dessert of the Week</a>
+            <a href="All_Recipes.html">All Recipes</a>
+        </div>
+    </nav>
+  
+
+
+
+    <main>
+        <div class="Bakeify">
+        <img src="Images/BakeifyLogo.png" alt="Bakeify Logo">
+        </div>
+        <div class="Subtitlecard">
+        <h2 class="subtitle">Welcome to Bakeify! Here you can browse recipes that take only 5 steps or less!</h2>
+        </div>
+       
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="Images/MugBrownie.png" alt="Brownies in a mug" class="recipe-img">
+                    <h3>Mug Brownies</h3>
+                    <div class="steps">
+                        <strong>Steps:</strong><br>
+                        Put dry stuff in a mug<br>
+                        (Flour, sugar, cocoa, salt)<br>
+                        Add wet stuff<br>
+                        (Oil and water)<br>
+                        Mix until smooth.<br>
+                        Microwave 1 minute<br>
+                        Let it cool, then eat!<br>
+                        Add ice cream if you want
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <img src="Images/Cookies.png" alt="Cookies" class="recipe-img">
+                    <h3>Cookies</h3>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="Images/FruitMuffins.png" alt="Fruit Muffins" class="recipe-img">
+                    <h3>Fruit Muffins</h3>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
+
+
 
