Mostly added information in the website and polished the design of the website.

--- a/All_Recipes.html
+++ b/All_Recipes.html
@@ -30,30 +30,112 @@
             <div class="column">
                 <div class="card">
                     <img src="Images/MugBrownie.png" alt="Brownies in a mug" class="recipe-img">
+                    <div class="credits">
+                    <em>Image by wirestock</em>
+                    </div>
                     <h3>Mug Brownies</h3>
                     <div class="steps">
                        <strong>Steps:</strong><br>
-                        Put dry stuff in a mug<br>
-                        (Flour, sugar, cocoa, salt)<br>
-                        Add wet stuff<br>
-                        (Oil and water)<br>
-                        Mix until smooth.<br>
-                        Microwave 1 minute<br>
-                        Let it cool, then eat!<br>
-                        Add ice cream if you want
+                       Combine in a mug <br>
+                       4 tbsp flour, 4 tbsp sugar,<br>
+                       2 tbsp cocoa powder, 2 tbsp milk,<br> 
+                       2 tbsp oil, and ½ tsp vanilla.<br>
+                       Stir until smooth.<br><br>
+                       Cook in microwave for 1 min 30 sec<br>
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <img src="Images/Cookies.png" alt="Cookies" class="recipe-img">
-                    <h3>Cookies</h3>
+                    <img src="Images/Cookies.png" alt="Air Fryer Cookies" class="recipe-img">
+                    <div class="credits">
+                    <em>Image by Freepik</em>
+                    </div>
+                    <h3>Air Fryer Cookies</h3>
+                    <div class="steps">
+                        <strong>Steps:</strong><br>
+                       Combine 2 tbsp butter,3 tbsp brown sugar,<br>
+                       1 egg yolk, ½ tsp vanilla,4 tbsp flour, <br>
+                       and 2 tbsp chocolate chips. <br>
+                       Stir until dough forms.<br><br>
+                       Shape into cookie and place <br>
+                       in the air fryer at 320°F for 6 to 8 min.<br>
+                    </div> 
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <img src="Images/FruitMuffins.png" alt="Fruit Muffins" class="recipe-img">
-                    <h3>Fruit Muffins</h3>
+                    <img src="Images/Cornbread.png" alt="Cornbread" class="recipe-img">
+                    <h3>Cornbread</h3>
+                    <div class="steps">
+                      <strong>Steps:</strong><br>
+                      <strong>Steps:</strong><br>
+                      Mix ⅓ cup milk, 1 egg, and cornbread mix<br>
+                      (like Jiffy if available).<br><br>
+                      Pour batter into a greased baking dish <br>
+                      or oven-safe skillet and<br>
+                      bake at 400°F for 20 to 25 min until golden.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="Images/BlueberryMuffins.jpg" alt="Blueberry Muffins" class="recipe-img">
+                    <div class="credits">
+                    <em>Image by fahrwasser on Freepik</em>
+                    </div>
+                    <h3>Blueberry Muffin</h3>
+                    <div class="steps">
+                        <strong>Steps:</strong><br>
+                     In a bowl, mix 1 ½ cups flour,<br>
+                     ¾ cup sugar, 2 tsp baking powder, and ½ tsp salt.<br>
+                     Add ⅓ cup oil, 1 egg, and ½ cup milk,<br>
+                     then stir gently. Fold in 1 cup blueberries. <br> <br>
+                     Scoop into muffin cups and bake at 375°F<br>
+                    for 20 to 25 minutes until golden.
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <img src="Images/MiniPancakes.jpg" alt="Mini Pancakes" class="recipe-img">
+                    <div class="credits">
+                    <em>Image by KamranAydinov on Freepik</em>
+                    </div>
+                    <h3>Mini Pancakes</h3>
+                    <div class="steps">
+                       <strong>Steps:</strong><br>
+                      In a bowl, mix 1 cup flour, 2 tbsp sugar,<br>
+                      1 tsp baking powder, and a pinch of salt.<br>
+                      Add 1 egg, ¾ cup milk, and 1 tbsp melted butter,<br>
+                      then stir until smooth.<br><br>
+                      Pour small spoonfuls of batter onto a greased pan,<br>
+                      cook until bubbles form, flip, and cook until golden.
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="Images/NutellaQuesadilla.png" alt="Nutella Quesadilla" class="recipe-img">
+                   
+                    <div class="credits">
+                    <em>Image by KamranAydinov on Freepik</em>
+                    </div>
+
+                    <h3>Nutella Quesadilla</h3> 
+                    <div class="steps">
+                      <strong>Steps:</strong><br>
+                      Spread 2 to 3 tbsp Nutella on one tortilla.<br>
+                      Fold tortilla in half.<br>
+                      Cook in a dry pan for 1 to 2 minutes per side<br>
+                      until warm and slightly crispy.<br>
+                      Add sliced bananas or strawberries if desired.<br>
+                    </div>
+                   </div>
                 </div>
             </div>
         </div>
