--- a/DOW.html
+++ b/DOW.html
@@ -28,17 +28,18 @@
                 <div class="card">
                     <span class="crown-icon" title="Dish of the Week">&#x1F451;</span>
                     <img src="Images/MugBrownie.png" alt="Brownies in a mug" class="recipe-img">
+                    <div class="credits">
+                    <em>Image by wirestock</em>
+                    </div>
                     <h3>Mug Brownies</h3>
                     <div class="steps">
-                        <strong>Steps:</strong><br>
-                        Put dry stuff in a mug<br>
-                        (Flour, sugar, cocoa, salt)<br>
-                        Add wet stuff<br>
-                        (Oil and water)<br>
-                        Mix until smooth.<br>
-                        Microwave 1 minute<br>
-                        Let it cool, then eat!<br>
-                        Add ice cream if you want
+                       <strong>Steps:</strong><br>
+                       Combine in a mug <br>
+                       4 tbsp flour, 4 tbsp sugar,<br>
+                       2 tbsp cocoa powder, 2 tbsp milk,<br> 
+                       2 tbsp oil, and ½ tsp vanilla.<br>
+                       Stir until smooth.<br><br>
+                       Cook in microwave for 1 min 30 sec<br>
                     </div>
                 </div>
             </div>
